Typecasting to Constructor